# jchess

./: .gitignore  CMakeLists.txt  README
console/: CMakeLists.txt  application.cpp  consolegame.cpp  consolegame.h  main.cpp
core/: CMakeLists.txt  alphabetasearch.cpp  alphabetasearch.h  bitboard.cpp  bitboard.h  bitboard1.cpp  bitboard1.h  board.cpp  board.h  board0x88.cpp  board0x88.h  board8x8.cpp  board8x8.h  boardbase.cpp  boardbase.h  engine.cpp  engine.h  evaluation.cpp  evaluation.h  fen.cpp  fen.h  game.cpp  game.h  jchess.h  move.cpp  move.h  movelist.cpp  movelist.h  negamaxsearch.cpp  negamaxsearch.h  perft.cpp  perft.h  search.cpp  search.h  timer.cpp  timer.h  types.h  util.cpp
ext/: CMakeLists.txt
src/: CMakeLists.txt  jchess_board.cpp  jchess_board.h  jchess_board8x8.cpp  jchess_board8x8.h  jchess_consts.h  jchess_fen.cpp  jchess_fen.h  jchess_move.cpp  jchess_move.h  jchess_movelist.cpp  jchess_movelist.h  jchess_types.h  jcl_bitboard.cpp  jcl_bitboard.h  jcl_board.cpp  jcl_board.h  jcl_board8x8.cpp  jcl_board8x8.h  jcl_consts.h  jcl_evaluation.cpp  jcl_evaluation.h  jcl_fastboard8x8.cpp  jcl_fastboard8x8.h  jcl_fen.cpp  jcl_fen.h  jcl_move.cpp  jcl_move.h  jcl_movelist.cpp  jcl_movelist.h  jcl_perft.cpp  jcl_perft.h  jcl_timer.cpp  jcl_timer.h  jcl_types.h  jcl_util.cpp  jcl_util.h
test/: CMakeLists.txt  test_bitboard.cpp  test_board.cpp
tools/console/: CMakeLists.txt  application.cpp  application.h  consolegame.cpp  consolegame.h  main.cpp
